# pynagioscheck

./: .coveragerc  .gitignore  AUTHORS.txt  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  coverage  nagioscheck.py  pyproject.toml  setup.py
examples/: check_redis  check_sleep
tests/: __init__.py  test_critical.py  test_ok.py  test_perfdata.py
